--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <profiles>
         <profile>
-            <id>Addition And Subtract Tests</id>
+            <id>AdditionAndSubtractTests</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
@@ -31,7 +31,7 @@
         </profile>
 
         <profile>
-            <id>Multiplication And Division Tests</id>
+            <id>MultiplicationAndDivisionTests</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
