hw3 was created

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,16 @@
                 <suite.file>${project.basedir}/src/test/resources/hw2/hw2.xml</suite.file>
             </properties>
         </profile>
+
+        <profile>
+            <id>hw3</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <suite.file>${project.basedir}/src/test/resources/hw3/hw3.xml</suite.file>
+            </properties>
+        </profile>
     </profiles>
 
     <dependencies>
