--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <encoding.version>UTF-8</encoding.version>
 
         <testng.version>7.0.0</testng.version>
-
+        <aspectj.version>1.8.10</aspectj.version>
         <calculator.version>1.0</calculator.version>
         <surefire.version>3.0.0-M3</surefire.version>
     </properties>
@@ -135,7 +135,6 @@
                     <encoding>${encoding.version}</encoding>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -144,7 +143,20 @@
                     <suiteXmlFiles>
                         <suiteXmlFile>${suite.file}</suiteXmlFile>
                     </suiteXmlFiles>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
+                    <systemPropertyVariables>
+                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
+                    </systemPropertyVariables>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
