--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <aspectj.version>1.8.10</aspectj.version>
 
         <testng.version>7.0.0</testng.version>
+        <jdi-light-html.version>1.3.2</jdi-light-html.version>
 
         <calculator.version>1.0</calculator.version>
         <surefire.version>3.0.0-M3</surefire.version>
@@ -90,6 +91,17 @@
                 <suite.file>${project.basedir}/src/test/resources/hw5/hw5.xml</suite.file>
             </properties>
         </profile>
+
+        <profile>
+            <id>hw6</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <suite.file>${project.basedir}/src/test/resources/hw6/hw6.xml</suite.file>
+            </properties>
+        </profile>
+
     </profiles>
 
     <dependencies>
@@ -144,6 +156,12 @@
             <artifactId>cucumber-picocontainer</artifactId>
             <version>6.7.0</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.epam.jdi</groupId>
+            <artifactId>jdi-light-html</artifactId>
+            <version>${jdi-light-html.version}</version>
         </dependency>
     </dependencies>
 
